# Recycle-Fullstack-Project

./: .gitignore  README.md  ZUSTAND_IMPLEMENTATION.md  docker-compose.yml  package-lock.json
.github/workflows/: cd.yml  ci.yml  pylint.yml
Assignment-documents/: README_DB_SETUP.md
backend/: .env.example  .pylintrc  Dockerfile  alembic.ini  pyproject.toml  safety-policy.yml  seed.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 2025_10_28_1327-32dead81c695_initial_schema.py  2025_11_10_0758-e41600f8575c_add_message_reads_table.py  2025_11_10_1200-c1e2f3g4h5i6_add_message_reads_table.py  2025_11_26_1321-b7af2c4d2f9e_add_conversation_updated_at.py
backend/app/: config.py  dependencies.py  main.py  middleware.py
backend/app/db/: mongo.py  mysql.py  neo4j.py
backend/app/models/: __init__.py  category.py  details.py  favorites.py  item_views.py  location.py  media.py  messages.py  price_history.py  product.py  product_images.py  sold.py  user.py
backend/app/repositories/: activity_repository.py  base.py  factory.py  location_repository.py  message_repository.py  product_repository.py  user_repository.py
backend/app/repositories/mysql/: activity_repository.py  factory.py  location_repository.py  message_repository.py  product_repository.py  user_repository.py
backend/app/routers/: __init__.py  activity.py  activity_router.py  admin.py  admin_router.py  auth.py  auth_router.py  favorites.py  favorites_router.py  items.py  location.py  location_router.py  messages.py  messages_router.py  mongodb.py  mysql.py  neo4j.py  products.py  products_router.py  profile.py  profile_router.py
backend/app/schemas/: activity_schema.py  location.py  message_schema.py  product.py  product_schema.py  schemas.py  user.py  user_schema.py
backend/app/services/: __init__.py  activity_service.py  admin_service.py  auth_service.py  file_upload_service.py  location_service.py  message_service.py  product_service.py  profile_service.py
backend/scripts/: seed.py
backend/scripts/mysql/: create_users.sql  init_database.sql
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_ci_failure_demo.py  test_seed_external_api.py
backend/tests/unit/services/: test_admin_service.py  test_auth_service.py  test_file_upload_service.py  test_location_service.py  test_message_service.py  test_product_creation_validation.py  test_product_service.py  test_profile_service.py  test_user_login_validation.py  test_user_registration_validation.py
frontend/: .env.e2e  .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js
frontend/e2e/: auth_flow.spec.js  dashboard.spec.js  global-setup.js  messaging.spec.js  products.spec.js
frontend/e2e/fixtures/: auth.js
frontend/src/: App.jsx  App.tsx  main.jsx  setupTests.js
frontend/src/api/: activity.js  admin.js  auth.js  base.js  favorites.js  index.js  messages.js  products.js  profile.js
frontend/src/components/: Admin.tsx  Alert.jsx  Items.tsx  (+14 more)
old_code/: Messages_old.jsx
performance-tests/: README.md  config.js  load.js  soak.js  spike.js  stress.js
postman/: Fullstack Project - Comprehensive API Test Suite.postman_collection.json
testing_artifacts/jmeter/: load_test.jmx
testing_artifacts/postman/: Fullstack Project - Comprehensive API Test Suite.postman_collection.json
(+77 files in other folders)
