[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["null <you@example.com>"]
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.43"
pymysql = "^1.1.2"
python-dotenv = "^1.1.1"
alembic = "^1.16.5"
email-validator = "^2.1.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = "^0.0.18"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
faker = "^37.6.0"
requests = "^2.32.5"
azure-storage-blob = "^12.23.1"
slowapi = "^0.1.9"
sentry-sdk = {extras = ["fastapi"], version = "^2.46.0"}
types-python-jose = "^3.5.0.20250531"
types-passlib = "^1.7.7.20250602"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
mypy = "^1.18.2"
bandit = "^1.9.2"
ruff = "^0.14.6"
safety = "^3.7.0"


[[tool.poetry.source]]
name = "safety"
url = "https://pkgs.safetycli.com/repository/recycle/project/recycle-fullstack-project/pypi/simple/"
priority = "primary"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.plugin",
    "ignore::DeprecationWarning:sentry_sdk.integrations.fastapi",
    "ignore::DeprecationWarning:sentry_sdk.integrations.starlette",
    "ignore::DeprecationWarning:slowapi.extension",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
